--- a/SZKOLNE/blackjack/styles.css
+++ b/SZKOLNE/blackjack/styles.css
@@ -2,6 +2,12 @@ body {
     width: 100%;
 }
 
+.action{
+    width: 24%;
+    height: 50px;
+    margin: 11px;
+}
+
 #players {
     width: 100%;
     display: flex;
@@ -10,23 +16,48 @@ body {
 
 .player {
     display: grid;
-    height: 200px;
-    width: 40%;
+    height: 300px;
+    width: 49%;
     background: green;
-    font-size: 3em;
-    color: rgba(0, 0, 0, 0.5)
+    /* text-align: center; */
+    font-family: sans-serif;
+    font-size: 6em;
+    color: rgba(0, 0, 0, 0.5);
+    box-shadow: black 5px 5px 5px;
 }
-
+.player > p{
+    grid-column: 1;
+    grid-row: 1;
+    position: relative;
+    text-align: center;
+}
 
 .card {
     grid-column: 1;
     grid-row: 1;
-    position: absolute;
-    top: 10px;
-    left: 10px;
+    position: relative;
+    padding: 10px;
 }
 
 .card img {
-    width: 100px;
-    height: calc(100 * 1.78)px;
+    width: 150px;
+    height: auto;
+}
+
+#summary{
+    width: 98%;
+    margin: 14px;
+    padding: 10px;
+    background-color: darkorange;
+    height: 300px;
+}
+#advantage{
+    width: 96.5%;
+}
+#game_answer{
+    text-align: center;
+}
+#next_round{
+    width: 100%;
+    height: 50px;
 }
