--- a/ROZWOJÓWKA/2021/EE.09-02-21.01-SG REPREZENTACJA/styl2.css
+++ b/ROZWOJÓWKA/2021/EE.09-02-21.01-SG REPREZENTACJA/styl2.css
@@ -48,12 +48,12 @@ main {
     float: right;
 }
 
-.TeamContainer-wrapper {
+.liga {
     display: flex;
     justify-content: center;
 }
 
-.TeamContainer {
+.liga2 {
     display: inline-block;
     text-align: center;
     align-items: center;
@@ -64,7 +64,7 @@ main {
     border-radius: 15px;
 }
 
-.TeamContainer:hover {
+.liga2:hover {
     color: black;
     background-color: white;
 }
