Zmiany kantro i jakis projekt dla hani

--- a/SZKOLNE/Waluty/StylKantora.css
+++ b/SZKOLNE/Waluty/StylKantora.css
@@ -82,13 +82,13 @@ body{
     
 }
 
-.hania{
+.waluty{
     border: var(--mc) 5px solid;
     width: 99.5%;
     display: flex;
 }
 
-.hania > *{
+.waluty > *{
     margin: auto;
 }
 
